[package]
name = "honeyland-staking-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "honeyland_staking_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.8.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
cardinal-token-manager = { version = "^1.7.9", features = ["cpi"] }
cardinal-payment-manager = { version = "^1.7.9", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
